--- a/src/components/ProductListItem/ProductListItem.css
+++ b/src/components/ProductListItem/ProductListItem.css
@@ -20,11 +20,20 @@
     cursor: pointer;
     transition: background 0.2s;
 }
-
+.product-card button:disabled {
+    background: #ccc;
+    cursor: not-allowed;
+    color: #888;
+}
 .product-card button:hover {
     background: #d2b48c;
 }
 
+.product-card button:disabled:hover {
+    background: #ccc;
+    color: #888;
+    cursor: not-allowed;
+}
 .product-card small::before {
     content: "£";
     color: #bfa77a;
